--- a/home/.chezmoiscripts/linux/run_onchange_after_10_fonts.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_after_10_fonts.sh.tmpl
@@ -10,7 +10,7 @@ fonts_urls=(
 )
 
 nerdfonts_version="v2.3.3"
-nerdfonts_fonts=("Hack" "Ubuntu")
+nerdfonts_fonts=("Hack" "Noto")
 
 updated_counter=0
 
