feat(pipewire): add noise cancellation source

--- a/home/.chezmoiignore.tmpl
+++ b/home/.chezmoiignore.tmpl
@@ -2,6 +2,7 @@
 .config/alacritty/
 .config/gammastep/
 .config/mpv/
+.config/pipewire/
 .config/zathura/
 .config/code-flags.conf
 .config/electron-flags.conf
