feat(waybar): change workspace button:hover color

--- a/home/private_dot_config/waybar/style.css
+++ b/home/private_dot_config/waybar/style.css
@@ -30,7 +30,7 @@ window .modules-right {
 
 #workspaces button:hover {
     background: @surface2;
-    color: @mantle;
+    color: @blue;
 }
 
 #workspaces button.focused {
