feat(chezmoi): ignore gui apps on headless setups

--- a/home/.chezmoiignore.tmpl
+++ b/home/.chezmoiignore.tmpl
@@ -1,6 +1,10 @@
 {{- if .headless }}
 .config/alacritty/
+.config/fontconfig/
+.config/foot/
+.config/fuzzel/
 .config/gammastep/
+.config/mako/
 .config/mpv/
 .config/pipewire/
 .config/zathura/
