--- a/home/.chezmoiscripts/linux/run_onchange_after_theme.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_after_theme.sh.tmpl
@@ -8,8 +8,10 @@ curl --create-dirs -fLo "${HOME}/.themes/catppuccin.zip" "https://github.com/cat
 unzip -o "${HOME}/.themes/catppuccin.zip" -d "${HOME}/.themes"
 rm -rf "${HOME}/.themes/catppuccin.zip"
 
-flatpak override --user --filesystem="${HOME}/.themes:ro"
-flatpak override --user --env=GTK_THEME="Catppuccin-Mocha-Standard-Blue-Dark"
+if type flatplak &>/dev/null; then
+    flatpak override --user --filesystem="${HOME}/.themes:ro"
+    flatpak override --user --env=GTK_THEME="Catppuccin-Mocha-Standard-Blue-Dark"
+fi
 
 mkdir -p "${HOME}/.config/gtk-4.0"
 ln -sf "${HOME}/.themes/Catppuccin-Mocha-Standard-Blue-Dark/gtk-4.0/assets" "${HOME}/.config/gtk-4.0/assets"
