--- a/home/.chezmoiscripts/linux/run_onchange_before_10_dirs.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_10_dirs.sh.tmpl
@@ -8,6 +8,7 @@
     "${HOME}/Downloads"
     "${HOME}/Games"
     "${HOME}/Music"
+    "${HOME}/Music/projects"
     "${HOME}/Pictures"
     "${HOME}/Public"
     "${HOME}/Templates"
