feat(chezmoi): update ignore

--- a/home/.chezmoiignore.tmpl
+++ b/home/.chezmoiignore.tmpl
@@ -1,12 +1,18 @@
 {{- if .headless }}
 .config/alacritty/
+.config/fontconfig/
 .config/ferris/
 .config/foot/
+.config/fuzzel/
+.config/gammastep/
+.config/mako/
 .config/mpv/
+.config/pipewire/
 .config/zathura/
 .local/share/wallpapers/
 {{- end }}
 {{- if (and (eq .chezmoi.os "linux") (not .swaywm)) }}
 .config/sway/
 .config/waybar/
+.config/swayimg/
 {{- end }}
