feat(chezmoi): update script dirs

--- a/home/.chezmoiscripts/linux/run_onchange_before_10_dirs.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_10_dirs.sh.tmpl
@@ -8,17 +8,17 @@
     "${HOME}/Downloads"
     "${HOME}/Games"
     "${HOME}/Music"
-    "${HOME}/Music/projects"
     "${HOME}/Pictures"
     "${HOME}/Public"
     "${HOME}/Templates"
     "${HOME}/Videos"
     "${HOME}/Workspace/home"
+    "${HOME}/Workspace/music"
     "${HOME}/Workspace/repos" -}}
 
 #!/usr/bin/env bash
 
-set -eufo pipefail
+set -eu
 
 mkdir -p {{ $dirs | join " " }}
 chmod 700 {{ $dirs | join " " }}
