--- a/home/.chezmoiscripts/linux/run_onchange_after_10_theme.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_after_10_theme.sh.tmpl
@@ -8,7 +8,7 @@ curl --create-dirs -fLo "${HOME}/.themes/catppuccin.zip" "https://github.com/cat
 unzip -o "${HOME}/.themes/catppuccin.zip" -d "${HOME}/.themes"
 rm -rf "${HOME}/.themes/catppuccin.zip"
 
-if type flatplak &>/dev/null; then
+if type flatpak &>/dev/null; then
     flatpak override --user --filesystem="${HOME}/.themes:ro"
     flatpak override --user --env=GTK_THEME="Catppuccin-Mocha-Standard-Blue-Dark"
 fi
