feat(chezmoi): ignore encrypted files when key not present

--- a/home/.chezmoiignore.tmpl
+++ b/home/.chezmoiignore.tmpl
@@ -16,3 +16,8 @@
 .config/waybar/
 .config/swayimg/
 {{- end }}
+{{- if not .agekey }}
+.config/shell/personal
+.ssh/allowed_signers
+.ssh/config
+{{- end}}
