--- a/home/.chezmoiscripts/linux/run_onchange_after_10_flatpak.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_after_10_flatpak.sh.tmpl
@@ -15,6 +15,7 @@ if type flatpak &>/dev/null; then
             "com.google.Chrome"
             "com.spotify.Client"
             "com.usebottles.bottles"
+            "com.valvesoftware.Steam"
             "fm.reaper.Reaper"
             "io.dbeaver.DBeaverCommunity"
             "md.obsidian.Obsidian"
@@ -29,6 +30,7 @@ if type flatpak &>/dev/null; then
         flatpak install --user -y "${flatpak_package}"
     done
 
+    # Global settings
     flatpak override --user --filesystem="/home/${USER}/.themes:ro"
     flatpak override --user --env=GTK_THEME="Catppuccin-Mocha-Standard-Blue-Dark"
 
@@ -47,6 +49,11 @@ if type flatpak &>/dev/null; then
     # Obsidian settings
     flatpak override --user --env=OBSIDIAN_USE_WAYLAND=1 md.obsidian.Obsidian
     flatpak override --user --socket=wayland md.obsidian.Obsidian
+
+    # Steam settings
+    flatpak override --user com.valvesoftware.Steam --filesystem="/home/${USER}/.local/share/icons"
+    flatpak override --user com.valvesoftware.Steam --filesystem="/home/${USER}/.local/share/applications"
+    flatpak override --user com.valvesoftware.Steam --filesystem="/home/${USER}/Pictures/Steam"
 
     # Flatseal settings
     flatpak override --user --socket=wayland com.github.tchx84.Flatseal
